--- a/index.html
+++ b/index.html
@@ -19,9 +19,18 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/css/main.css" rel="stylesheet">
-
+  
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/home.js"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L8GC9J4JFN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L8GC9J4JFN');
+</script>
+
 </head>
 
 <body class="index-page">
