--- a/service-details.html
+++ b/service-details.html
@@ -25,6 +25,14 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-L8GC9J4JFN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-L8GC9J4JFN');
+  </script>
 
   <!-- =======================================================
   * Template Name: eStartup
