update a personal site

--- a/index.html
+++ b/index.html
@@ -38,8 +38,6 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
         <h1 class="sitename">Abinash <span>M</span></h1>
       </a>
 
@@ -63,43 +61,20 @@
       <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
         <div class="row gy-5">
           <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
-            <h2 class="main_sitename"></h2>
-            <h4 class="child_sitename"></h4>
+            <span><h2 class="main_sitename"></h2></span>
+            <h3 class="child_sitename"></h3>
             <div class="d-flex">
               <a href="#about" class="btn-get-started">Get Started</a>
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2">
-            <img src="assets/img/hero-img.png" class="img-fluid" alt="">
+            <img src="assets/img/main.png" class="img-fluid" alt="">
           </div>
         </div>
       </div>
 
-      <div class="icon-boxes position-relative" data-aos="fade-up" data-aos-delay="200">
-        <div class="container position-relative">
-          <div class="row gy-4 mt-5">
+    </section>
 
-            <div class="col-xl-6 col-md-6">
-              <div class="icon-box">
-                <div class="icon"><i class="bi bi-list-task"></i></div>
-                <h4 class="title"><a href="" class="stretched-link">Task Management System</a></h4>
-              </div>
-            </div><!--End Icon Box -->
-
-            <div class="col-xl-6 col-md-6">
-              <div class="icon-box">
-                <div class="icon"><i class="bi bi-gem"></i></div>
-                <h4 class="title"><a href="" class="stretched-link">Sed ut perspiciatis</a></h4>
-              </div>
-            </div><!--End Icon Box -->
-
-          </div>
-        </div>
-      </div>
-
-    </section><!-- /Hero Section -->
-
-    <!-- About Section -->
     <section id="about" class="about section">
 
       <div class="container">
@@ -108,31 +83,35 @@
 
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
             <p class="who-we-are">Who We Are</p>
-            <h3>Unleashing Potential with Creative Strategy</h3>
+            <h3>Building Innovation with 5+ Years IT Experience</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+                With <strong>5 years of experience in IT</strong>, we delivering <strong>high-quality software solutions</strong>. 
+                Currently working as <strong>Senior Software Engineer</strong>, also handling <strong>freelancing projects</strong> to gain more expertise and knowledge.
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Worked on <strong>Multiple Technologies</strong> and always adapt fast to new trends.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Strong <strong>Problem-Solving skills</strong> and debugging complex issues with efficiency.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Handling <strong>Both Full-time job & Freelancing</strong>, managing multiple projects at once.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Passionate in <strong>Learning & Growing</strong>, always improving technical and soft skills.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Good at <strong>Team collaboration & Communication</strong>, work with different teams & clients.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Believe in <strong>Delivering Quality Work</strong>, ensuring performance and scalability.</span></li>
             </ul>
             <a href="#" class="read-more"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
-          </div>
-
+        </div>
+        
+        
           <div class="col-lg-6 about-images" data-aos="fade-up" data-aos-delay="200">
             <div class="row gy-4">
-              <div class="col-lg-6">
-                <img src="assets/img/about-company-1.jpg" class="img-fluid" alt="">
+              <div class="col-lg-12">
+                <img src="assets/img/thinking.png" class="img-fluid" alt="Thinking">
               </div>
-              <div class="col-lg-6">
-                <div class="row gy-4">
-                  <div class="col-lg-12">
-                    <img src="assets/img/about-company-2.jpg" class="img-fluid" alt="">
+              <div class="col-lg-12">
+                <div class="row gy-12">
+                  <div class="col-lg-6">
+                    <img src="assets/img/problem-solving.png" class="img-fluid" alt="Problem-Solving">
                   </div>
-                  <div class="col-lg-12">
-                    <img src="assets/img/about-company-3.jpg" class="img-fluid" alt="">
+                  <div class="col-lg-6">
+                    <img src="assets/img/codeing.png" class="img-fluid" alt="Coding">
                   </div>
                 </div>
               </div>
@@ -143,16 +122,55 @@
         </div>
 
       </div>
-    </section><!-- /About Section -->
+    </section>
 
-    <!-- Services Section -->
+    <section id="ourworks" class="owrworks">
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Our Works</h2>
+        <div><span>Our Extra </span> <span class="description-title">Activities</span></div>
+      </div>
+      <div class="icon-boxes position-relative" data-aos="fade-up" data-aos-delay="200">
+        <div class="container position-relative">
+          <div class="row gy-4 mt-5">
+
+            <div class="col-xl-3 col-md-3">
+              <div class="icon-box">
+                <div class="icon"><i class="bi bi-calculator"></i></div>
+                <h4 class="title"><a href="https://abinashmofficial.github.io/calculator/" class="stretched-link">Simple calculator</a></h4>
+              </div>
+            </div>
+
+            <div class="col-xl-3 col-md-3">
+              <div class="icon-box">
+                <div class="icon"><i class="bi bi-filetype-php"></i></div>
+                <h4 class="title"><a href="https://abinashmofficial.github.io/php-crud" class="stretched-link">PHP CRUD Application</a></h4>
+              </div>
+            </div>
+
+            <div class="col-xl-3 col-md-3">
+              <div class="icon-box">
+                <div class="icon"><i class="bi bi-qr-code"></i></div>
+                <h4 class="title"><a href="https://abinashmofficial.github.io/simple-qr-generator/" class="stretched-link">QR Generator & Download</a></h4>
+              </div>
+            </div>
+
+            <div class="col-xl-3 col-md-3">
+              <div class="icon-box">
+                <div class="icon"><i class="bi bi-mic"></i></div>
+                <h4 class="title"><a href="https://abinashmofficial.github.io/text2speech/" class="stretched-link">Simple Text 2 Speech</a></h4>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section id="services" class="services section">
-
-      <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Services</h2>
         <div><span>Check Our</span> <span class="description-title">Services</span></div>
-      </div><!-- End Section Title -->
+      </div>
 
       <div class="container">
 
@@ -160,93 +178,107 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item  position-relative">
-              <div class="icon">
-                <i class="bi bi-activity"></i>
+              <div class="progress-circle">
+                <svg width="120" height="120" viewBox="0 0 120 120">
+                  <circle class="bg" cx="60" cy="60" r="50" />
+                  <circle class="progress" cx="60" cy="60" r="50" style="stroke-dasharray: 314; stroke-dashoffset: calc(314 - (314 * 90) / 100);" />
+                </svg>
+                  <img src="assets/img/python.webp" alt="Centered Image">
               </div>
-              <a href="service-details.html" class="stretched-link">
-                <h3>Nesciunt Mete</h3>
+              <a href="index.html" class="stretched-link">
+                <h3>Python</h3>
               </a>
-              <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
+              <p>I have learned 90% of Python, covering web development, automation, and data analysis. I can create web applications, scripts, and machine learning models with efficiency. Now, I am focused on mastering the final 10% to enhance my skills even further.</p>
             </div>
-          </div><!-- End Service Item -->
+          </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
-              <div class="icon">
-                <i class="bi bi-broadcast"></i>
+              <div class="progress-circle">
+                <svg width="120" height="120" viewBox="0 0 120 120">
+                  <circle class="bg" cx="60" cy="60" r="50" />
+                  <circle class="progress" cx="60" cy="60" r="50" style="stroke-dasharray: 314; stroke-dashoffset: calc(314 - (314 * 85) / 100);" />
+                </svg>
+                <img src="assets/img/javascript.gif" alt="Centered Image">
               </div>
-              <a href="service-details.html" class="stretched-link">
-                <h3>Eosle Commodi</h3>
+              <a href="index.html" class="stretched-link">
+                <h3>Javascript</h3>
               </a>
               <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
             </div>
-          </div><!-- End Service Item -->
+          </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item position-relative">
-              <div class="icon">
-                <i class="bi bi-easel"></i>
+              <div class="progress-circle">
+                <svg width="120" height="120" viewBox="0 0 120 120">
+                  <circle class="bg" cx="60" cy="60" r="50" />
+                  <circle class="progress" cx="60" cy="60" r="50" style="stroke-dasharray: 314; stroke-dashoffset: calc(314 - (314 * 95) / 100);" />
+                </svg>
+                <img src="assets/img/php.svg" alt="Centered Image">
               </div>
-              <a href="service-details.html" class="stretched-link">
-                <h3>Ledo Markt</h3>
+              <a href="index.html" class="stretched-link">
+                <h3>PHP</h3>
               </a>
               <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
             </div>
-          </div><!-- End Service Item -->
+          </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item position-relative">
-              <div class="icon">
-                <i class="bi bi-bounding-box-circles"></i>
+              <div class="progress-circle">
+                <svg width="120" height="120" viewBox="0 0 120 120">
+                  <circle class="bg" cx="60" cy="60" r="50" />
+                  <circle class="progress" cx="60" cy="60" r="50" style="stroke-dasharray: 314; stroke-dashoffset: calc(314 - (314 * 95) / 100);" />
+                </svg>
+                <img src="assets/img/java.png" alt="Centered Image">
               </div>
-              <a href="service-details.html" class="stretched-link">
-                <h3>Asperiores Commodit</h3>
+              <a href="index.html" class="stretched-link">
+                <h3>Java</h3>
               </a>
               <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident adipisci neque.</p>
-              <a href="service-details.html" class="stretched-link"></a>
+              <a href="index.html" class="stretched-link"></a>
             </div>
-          </div><!-- End Service Item -->
+          </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
             <div class="service-item position-relative">
               <div class="icon">
                 <i class="bi bi-calendar4-week"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a href="index.html" class="stretched-link">
                 <h3>Velit Doloremque</h3>
               </a>
               <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem alias eius labore.</p>
-              <a href="service-details.html" class="stretched-link"></a>
+              <a href="index.html" class="stretched-link"></a>
             </div>
-          </div><!-- End Service Item -->
+          </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
             <div class="service-item position-relative">
               <div class="icon">
                 <i class="bi bi-chat-square-text"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a href="index.html" class="stretched-link">
                 <h3>Dolori Architecto</h3>
               </a>
               <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti recusandae ducimus enim.</p>
-              <a href="service-details.html" class="stretched-link"></a>
+              <a href="index.html" class="stretched-link"></a>
             </div>
-          </div><!-- End Service Item -->
+          </div>
 
         </div>
 
       </div>
 
-    </section><!-- /Services Section -->
+    </section>
 
-    <!-- Contact Section -->
     <section id="contact" class="contact section">
 
-      <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
         <div><span>Need Help?</span> <span class="description-title">Contact Us</span></div>
-      </div><!-- End Section Title -->
+      </div>
 
       <div class="container" data-aos="fade" data-aos-delay="100">
 
@@ -275,7 +307,7 @@
                 <h3>Email Us</h3>
                 <p>thisisabinashm@gmail.com</p>
               </div>
-            </div><!-- End Info Item -->
+            </div>
 
           </div>
 
@@ -309,13 +341,13 @@
 
               </div>
             </form>
-          </div><!-- End Contact Form -->
+          </div>
 
         </div>
 
       </div>
 
-    </section><!-- /Contact Section -->
+    </section>
 
   </main>
 
@@ -335,18 +367,18 @@
 
   </footer>
 
-  <!-- Scroll Top -->
+  
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Preloader -->
+  
   <div id="preloader"></div>
-  <!-- Vendor JS Files -->
+  
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
 
-  <!-- Main JS File -->
+  
   <script src="assets/js/main.js"></script>
   <script type="text/javascript">
     var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
