--- a/index.html
+++ b/index.html
@@ -161,12 +161,15 @@
               </div>
             </div>
             
-            <div class="col-xl-3 col-md-3">
-              <div class="icon-box">
-                <div class="icon"><i class="bi bi-terminal"></i></div>
-                <h4 class="title"><a href=" https://abinashmofficial.github.io/terminal/" class="stretched-link">Terminal</a></h4>
+            
+          </div>
+          <div class="row gy-4 mt-5">
+              <div class="col-xl-3 col-md-3">
+                <div class="icon-box">
+                  <div class="icon"><i class="bi bi-terminal"></i></div>
+                  <h4 class="title"><a href=" https://abinashmofficial.github.io/terminal/" class="stretched-link">Terminal</a></h4>
+                </div>
               </div>
-            </div>
           </div>
         </div>
       </div>
