--- a/index.html
+++ b/index.html
@@ -170,6 +170,12 @@
                   <h4 class="title"><a href=" https://abinashmofficial.github.io/terminal/" class="stretched-link">Terminal</a></h4>
                 </div>
               </div>
+              <div class="col-xl-3 col-md-3">
+                <div class="icon-box">
+                  <div class="icon"><i class="bi bi-terminal"></i></div>
+                  <h4 class="title"><a href=" https://abinashmofficial.github.io/hackscreen/" class="stretched-link">Matrix Screen</a></h4>
+                </div>
+              </div>
           </div>
         </div>
       </div>
