Integrate Google Analytics tracking code
Added Google Analytics tracking code to index.html.

--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
   <link href="assets/css/main.css" rel="stylesheet">
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/home.js"></script>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-L8GC9J4JFN"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-L8GC9J4JFN');
-</script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-L8GC9J4JFN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-L8GC9J4JFN');
+  </script>
 
 </head>
 
